correct padding on mobile view lang select

--- a/src/components/Input/index.scss
+++ b/src/components/Input/index.scss
@@ -155,6 +155,10 @@
       display: flex;
       align-items: center;
 
+      @include media($break-sm) {
+        width: calc(100% - 0.5rem);
+      }
+
       .lang-option {
         background-color: transparent;
         text-align: auto;
